--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "homepage": "https://github.com/calmcentralia/capstone#readme",
   "dependencies": {
+    "babel": "^6.5.2",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-preset-react": "^6.5.0",
     "flux": "^2.1.1",
     "react": "^0.14.7",
+    "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "webpack": "^1.12.14"
   }
 }
