--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "postinstall": "./node_modules/.bin/webpack"
   },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/calmcentralia/capstone.git"
@@ -31,5 +32,9 @@
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
     "webpack": "^1.12.14"
-  }
+  },
+  "engines": {
+  "node": "4.1.1",
+  "npm": "2.1.x"
+},
 }
