--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "doc": "docs"
   },
   "scripts": {
-  "postinstall": "./node_modules/.bin/webpack"
+    "postinstall": "./node_modules/.bin/webpack"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/calmcentralia/capstone.git"
@@ -27,6 +26,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.5.0",
     "flux": "^2.1.1",
+    "fuzzy": "^0.1.1",
     "react": "^0.14.7",
     "react-addons-linked-state-mixin": "^0.14.7",
     "react-dom": "^0.14.7",
@@ -34,7 +34,7 @@
     "webpack": "^1.12.14"
   },
   "engines": {
-  "node": "4.1.1",
-  "npm": "2.1.x"
-}
+    "node": "4.1.1",
+    "npm": "2.1.x"
+  }
 }
